# TorrentTidy

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
benches/: my_benchmark.rs  replace.rs  split.rs
src/: logger.rs  main.rs  q_bit.rs
src/re/: file_extension_split.rs  mod.rs  replace.rs  split.bigendian.dfa  split.littleendian.dfa  split.rs
