[package]
name = "torrent-tidy"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
regex = { version = "1.11" }

[workspace]
# 指定解析器版本
resolver = "2"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*, strip = true is equivalent to strip = "symbols"
debug = false       # Disable debug info
